tests/snapshots/examples_fixtures/primop__all_primops.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/all_primops.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E300]: Argument Type Mismatch

I found the wrong type in the 3rd argument to `put`.

  examples/primop/all_primops.flx:56:30
   |
56 |     let m2 = put(m1, "year", 2026);
   |                              ^^^^
   |                              ---- this argument has type `Int`

Note:
  expected argument type: String
  found argument type: Int
  the actual argument type is inferred from this expression

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
