tests/snapshots/examples_fixtures/primop__arith_and_compare.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/arith_and_compare.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
