tests/snapshots/examples_fixtures/primop__effect_boundary.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/effect_boundary.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
