tests/snapshots/examples_fixtures/primop__effects.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/effects.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
