tests/snapshots/examples_fixtures/primop__higher_order_fastcall.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/higher_order_fastcall.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/primop/higher_order_fastcall.flx:6:18
  |
6 |     let mapped = map(xs, fn(x) { x * 2 });
  |                  ^^^

Hint:
  Define it first: let map = ...;

Help:
  Did you mean `mapped`?


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/primop/higher_order_fastcall.flx:7:20
  |
7 |     let filtered = filter(mapped, fn(x) { x > 5 });
  |                    ^^^^^^

Hint:
  Define it first: let filter = ...;

Help:
  Did you mean `filtered`?


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/primop/higher_order_fastcall.flx:8:17
  |
8 |     let total = fold(filtered, 0, fn(acc, x) { acc + x });
  |                 ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/primop/higher_order_fastcall.flx:14:20
   |
14 |     let expanded = flat_map(xs, fn(x) { list(x, x + 10) });
   |                    ^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `any`.

  examples/primop/higher_order_fastcall.flx:17:11
   |
17 |     print(any(xs, fn(x) { x == 4 }));
   |           ^^^

Hint:
  Define it first: let any = ...;


error[E004]: Undefined Variable

I can't find a value named `all`.

  examples/primop/higher_order_fastcall.flx:18:11
   |
18 |     print(all(xs, fn(x) { x > 0 }));
   |           ^^^

Hint:
  Define it first: let all = ...;


error[E004]: Undefined Variable

I can't find a value named `find`.

  examples/primop/higher_order_fastcall.flx:19:11
   |
19 |     print(find(xs, fn(x) { x == 3 }));
   |           ^^^^

Hint:
  Define it first: let find = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/primop/higher_order_fastcall.flx:20:11
   |
20 |     print(count(xs, fn(x) { x % 2 == 0 }));
   |           ^^^^^

Hint:
  Define it first: let count = ...;


error[E004]: Undefined Variable

I can't find a value named `sort_by`.

  examples/primop/higher_order_fastcall.flx:22:18
   |
22 |     let sorted = sort_by([|5, 2, 4, 1, 3|], fn(x) { x });
   |                  ^^^^^^^

Hint:
  Define it first: let sort_by = ...;

Help:
  Did you mean `sorted`?

Found 9 errors.
== stdout ==
<not executed>
