tests/snapshots/examples_fixtures/primop__maps.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/maps.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
