tests/snapshots/examples_fixtures/primop__parse.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/parse.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
